# contools

./: .externals  .externals-tests  .gitattributes  .gitignore  .gitlinks  .gitmodules  .gitsvnextmodules  .svnignore  01_preconfigure.bat  01_preconfigure.sh  02_configure.bat  Changes_EN.old.txt  Changes_EN.txt  ISSUES.txt  README.md  README_EN.deps.txt  README_EN.txt  TODO.txt  __init__.bat  __init__.sh  _install.bat  changelog.txt  configure.bat  license.txt  preconfigure.bat  preconfigure.sh
._install/: __init__.bat  install_system32.bat  install_system32.vbs  install_system32_winxp.vbs  install_system64.bat  install_system64_link.bat  script_init.bat
.github/: FUNDING.yml
.github/workflows/: accum-gh-clone-stats.yml  accum-gh-view-stats.yml  contools-gh-clone-stats.yml  contools-gh-view-stats.yml
BuildTools/: TargetProject.PostBuildStep.bat  TargetProject.PreBuildStep.bat  __init__.bat
BuildTools/__init__/: __init__.bat
Projects/: ConsoleTools.sln
Scripts/Config/: cygwin.vars  msys.vars  msysdvlpr.vars
Scripts/TestScripts/: genstrings.tcl
Scripts/TestTools/: genstrings.py
Scripts/Tools/: .svnignore  PrintUserSessionId.cmd  __init__.bat  __init__.sh  abspath.bat  appendvar.bat  assert_msvc.bat  baselib.sh  buildlib.sh  buildlibcomponents.sh  buildres.sh  callargs.bat  callshift.bat  canonicalpath.bat  cat2.sh  cmdoplib.py  cmdoplib.std.xsh  cmdoplib.yaml.py  cmdoplib.yaml.xsh  countlines.bat  cstresc.bat  cygsetupdiff.sh  cygsetuplib.sh  cygsetupprint.sh  cygver.bat  cygver.sh  del_file.bat  del_file_pttn.bat  dirpath.bat  dospath.bat  dumpmountdirs.sh  errlvl.bat  exec_once_or_exit.bat  execfunc.sh  expandvar.bat  expandvarn.bat  expandvarx.bat  expandvarxn.bat  extract_version.bat  fileattr.bat  (+87 more)
TestTools/branch_workingset/: gen.bat
Tests/batscripts/: test_cstresc.bat  test_envblock_size.bat  test_make_url_absolute.bat  test_setvarsfromfile.bat  test_stresc.bat  test_strrep.bat
Tests/hashlib/: test1.sh  test2.sh  testlib.sh
Tests/traplib/: test1.sh  test2.sh  test254.sh  test3.sh  test4.sh
Tools/: Setup.hta  buildlib.sh  callshift.bat  canonicalpath.bat  copy.bat  countlines.bat  cygsetupprint.sh  cygver.bat  del_file.bat  del_file_pttn.bat  dos2unix.bat  dospath.bat  exec_once_or_exit.bat  execbat.sh  execwsh.bat  expandvar.bat  expandvarn.bat  extract_version.bat  fileattr.bat  filenameext.bat  funclib.sh  gccmrt.bat  gen_dir_hash_lst.bat  get_time.bat  get_time_as_filename.bat  hashlib.sh  if_.bat  iffexist.bat  joinvars.bat  mountdir.sh  perllib.sh  print_merged_logs.sh  print_product_ver.bat  query_session_id.bat  resetenv.bat  runas_admin.bat  setvarfromstd.bat  setvarsfromfile.bat  strchr.bat  stringlib.sh  (+10 more)
Tools/7zip/: readme.txt
Utilities/: README_EN.txt  TODO.txt  changelog.txt
_3dparty/utility/tacklelib/: CMakeLists.txt  README_EN.txt  changelog.txt
_3dparty/utility/tacklelib/_scripts/: __init__.bat  __init__.sh  configure_src.bat  configure_src.sh
_3dparty/utility/tacklelib/cmake/: Common.cmake  ConfigureFile.cmake  EnableTargetsExtension.cmake  FindEnvironment.cmake  ForwardVariables.cmake
_3dparty/utility/tacklelib/examples/utility/log/p7logger/: p7_logger_example1.cpp
_3dparty/utility/tacklelib/include/tacklelib/: debug.hpp.in  optimization.hpp.in  setup.hpp  tacklelib.hpp
_3dparty/utility/tacklelib/include/tacklelib/tackle/: basic_iterator.hpp  compressed_pair.hpp  date_time.hpp  debug.hpp  deque.hpp  file_handle.hpp  interface_handle.hpp  path_string.hpp  smart_handle.hpp  static_constexpr.hpp  string.hpp
_3dparty/utility/tacklelib/include/tacklelib/tackle/aligned_storage/: aligned_storage_base.hpp  aligned_storage_from.hpp
_3dparty/utility/tacklelib/include/tacklelib/tackle/aligned_storage/private/: aligned_storage_by_decl.hpp  aligned_storage_by_impl.hpp
_3dparty/utility/tacklelib/include/tacklelib/tackle/aligned_storage/public/: aligned_storage_by_decl.hpp
_3dparty/utility/tacklelib/include/tacklelib/tackle/geometry/: geometry.hpp  vector.hpp
_3dparty/utility/tacklelib/include/tacklelib/tackle/log/: log_handle.hpp
_3dparty/utility/tacklelib/include/tacklelib/utility/: addressof.hpp  assert.hpp  debug.hpp  library.hpp  library_api_define.hpp  locale.hpp  math.hpp  memory.hpp  optimization.hpp  platform.hpp  platform_features.hpp  preprocessor.hpp  static_assert.hpp  string.hpp  string_identity.hpp  time.hpp  type_identity.hpp  type_traits.hpp  utility.hpp
_3dparty/utility/tacklelib/src/: .svnignore  common.hpp  debug.hpp  optimization.hpp.in  setup.hpp  setup.hpp.in  tacklelib_private.hpp
_3dparty/utility/tacklelib/src/tackle/: date_time.cpp  file_handle.cpp  file_reader.cpp  file_reader.hpp  path_string.cpp  stream_storage.hpp  variant.hpp
_3dparty/utility/tacklelib/src/tackle/aligned_storage/: aligned_storage_by.hpp  max_aligned_storage.hpp
_3dparty/utility/tacklelib/src/tackle/aligned_storage/private/: max_aligned_storage_decl.hpp  max_aligned_storage_impl.hpp
_3dparty/utility/tacklelib/src/tackle/log/: log_handle.cpp
_3dparty/utility/tacklelib/src/testlib/: gtest_ext.hpp  testlib.cpp  testlib.hpp
_3dparty/utility/tacklelib/src/tests/: test_common.hpp  test_main.cpp  test_main.hpp  test_tacklelib.hpp  tests.cpp
_3dparty/utility/tacklelib/src/tests/bench/: pch.cpp  test_funcs_duration.cpp
_3dparty/utility/tacklelib/src/tests/unit/: test_deque.cpp  test_funcs.cpp
_3dparty/utility/tacklelib/src/utility/: algorithm.hpp  assert.hpp  assert_private.hpp  crc.cpp  crc.hpp  crc_tables.hpp  debug.cpp  hash.hpp  memory.cpp  optimization.cpp  utility.cpp
_3dparty/utility/tacklelib/src/utility/arc/7zip/: LzmaEnc.hpp
_3dparty/utility/tacklelib/src/utility/arc/libarchive/: libarchive.cpp  libarchive.hpp
_3dparty/utility/tacklelib/src/utility/log/p7logger/: p7_logger.hpp
__init__/: __init__.bat  __init__.sh  canonical_path.bat
_config/: config.0.vars.in  config.system.vars.in
cmake/: CPackMakeConfig.cmake  ExternalProjectEx.cmake  FindQwt.cmake  FindWindowsSDK.cmake  GenerateBuildVersion.cmake  Qt.cmake  README_EN.txt  Version.cmake  changelog.txt
tools/: load_config_dir.bat
(+3188 files in other folders)
